Bug fix - gap appearing between header & navbar when on small screen

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -182,7 +182,7 @@ li.dropdown {
         /* display: none; */
         flex-direction: column;
         position: absolute;
-        top: 60px;
+        top: 50px;
         left: 0;
         background-color: #333;
         width: 100%;
